# CppScanner

./: .gitignore  CMakeLists.txt  README.md  main.py
processor/: Converter.py  Processor.py  Utils.py  __init__.py
static/: result.js  sketch.js  style.css
templates/: base.html  filters.html  load_image.html  scan.html  scanner_form.html
